[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Tiles/new_blank_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainAudioSettings.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Futura Extra Black font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/futura_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Other/Arrow.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=6]
[ext_resource path="res://Assets/Buttons/Normal/checkbox_unchecked.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/Pressed/checkbox_checked.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=27]
size = 80
font_data = ExtResource( 3 )

[node name="SettingsControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="SettingsBG" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0.960784, 1 )
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="SettingsTitle" type="RichTextLabel" parent="."]
margin_left = 278.0
margin_top = 22.0
margin_right = 676.0
margin_bottom = 126.0
custom_fonts/normal_font = SubResource( 27 )
bbcode_enabled = true
bbcode_text = "[center]Settings"
text = "Settings"
scroll_active = false

[node name="ReturnButton" type="TextureButton" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
expand = true

[node name="GuideLine" type="Control" parent="."]

[node name="ShowLine" type="RichTextLabel" parent="GuideLine"]
margin_left = 135.0
margin_top = 260.0
margin_right = 332.0
margin_bottom = 291.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Show Guide Line"
text = "Show Guide Line"
scroll_active = false

[node name="ShowLineButton" type="TextureButton" parent="GuideLine"]
margin_left = 500.0
margin_top = 244.0
margin_right = 564.0
margin_bottom = 308.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="ShowMinimapLine" type="RichTextLabel" parent="GuideLine"]
margin_left = 135.0
margin_top = 350.0
margin_right = 442.0
margin_bottom = 381.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Show Minimap Guide Line"
text = "Show Minimap Guide Line"
scroll_active = false

[node name="ShowMinimapLineButton" type="TextureButton" parent="GuideLine"]
margin_left = 500.0
margin_top = 330.0
margin_right = 564.0
margin_bottom = 394.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 4

[node name="MainVolume" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="MainVolumeSlider" type="HSlider" parent="MainVolume"]
margin_left = 322.0
margin_top = 192.0
margin_right = 634.0
margin_bottom = 208.0
max_value = 1.0
step = 0.01
script = ExtResource( 2 )

[node name="MainVolumeLabel" type="RichTextLabel" parent="MainVolume"]
margin_left = 135.0
margin_top = 185.0
margin_right = 288.0
margin_bottom = 215.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Main Volume"
text = "Main Volume"

[node name="MainVolumeAmount" type="RichTextLabel" parent="MainVolume"]
margin_left = 650.0
margin_top = 185.0
margin_right = 759.0
margin_bottom = 215.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]100"
text = "100"

[connection signal="pressed" from="ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="toggled" from="GuideLine/ShowLineButton" to="." method="_on_ShowLineButton_toggled"]
[connection signal="toggled" from="GuideLine/ShowMinimapLineButton" to="." method="_on_ShowMinimapLineButton_toggled"]
[connection signal="value_changed" from="MainVolume/MainVolumeSlider" to="MainVolume/MainVolumeSlider" method="_on_HSlider_value_changed"]
